# synthetic-menubar

./: LICENSE  MANIFEST.in  README.md  SyntheticAPIClient.swift  SyntheticMenuBarApp.swift  com.botbotbot133.synthetic-menubar.plist  fix_launchagent.sh  install_launchagent.sh  pyproject.toml  setup.py  synthetic_menubar.py  synthetic_menubar_app.py  synthetic_menubar_debug.py  test_api.py
synthetic_menubar/: __init__.py
