[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthetic-menubar"
version = "1.0.0"
description = "Menu bar app for monitoring Synthetic API credits"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "rumps>=0.4.0",
]

[project.scripts]
synthetic-menubar = "synthetic_menubar_app:main"

[project.entry-points."console_scripts"]
synthetic-menubar = "synthetic_menubar_app:main"
